examples/test/testpolicy11460.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11460
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key25: value17
      key10: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value7
      podSelector:
        matchLabels:
          key5: value41
          key38: value30
          key30: value44
